  - MapAligner: split into MapAlignerIdentification, MapAlignerPoseClustering, MapAlignerSpectrum, and MapRTTransformer
  - model parameters of MapAligner tools are now set in the .ini file
  - NoiseFilter: split into NoiseFilterGaussian and NoiseFilterSGolay
  - PeakPicker: split into PeakPickerWavelet and PeakPickerHiRes
  - MascotAdapterOnline: now supports Mascot 2.3 servers
  - ProteinQuantifier: added support for writing idXML (suitable for export to mzTab)
- REMOVED:
  - AndiMS/NetCDF is no longer supported on any platform
  - removed IDDecoyProbability tool
 
UTIL tools: 
- ADDED:
  - INIUpdater: update INI and TOPPAS files
  - TransformationEvaluation: evaluate a (RT) transformation by applying it to a range of values
	 
OpenMS library improvements:


TOPPView improvements:
- MODIFIED:
  - ConsensusFeatures can now be colored using MetaValues
  - better grid line drawing/calculation, extracted AxisPainter class
  - IdentificationView:
    - added automatic labeling with peptide fragment sequence
    - theoretical spectrum is now hidden by default (labeling contains relevant information for most use cases)
    - automatic zoom to measured MS2 data range

TOPPAS improvements:
- TOPPAS allows for interactive download of preconfigured TOPPAS pipelines from OpenMS homepage
- "Recycling" mode for nodes, useful for database input files (see docu for details)
	 
Changes to the Build System: 
- TOPPAS now requires Qt's Webkit library
- Use CMAKE_BUILD_TYPE instead of OPENMS_BUILD_TYPE (removed)
- Use CMAKE_FIND_ROOT_PATH instead of CONTRIB_CUSTOM_DIR (deprecated)
- Removed AndiMS, NetCDF and dependencies
- Removed dependency to imslib, relevant classes were moved directly to OpenMS/CHEMISTRY/MASSDECOMPOSITION/IMS
- OpenMS now supports ctests functionality for optimized and parallel testing #363
	
Fixed Issues: 
	 
Detailed list of changes to specific OpenMS classes:
- NEW:
  - compose_f_gx_hy_t (from imslib)
  - compose_f_gx_t (from imslib)