@@ -70,8 +70,6 @@
 	<b>Misc</b>
   - @subpage UTILS_ImageCreator - Creates images from MS1 data (with MS2 data points indicated as dots).
 	- @subpage UTILS_MassCalculator - Calculates masses and mass-to-charge ratios of peptide sequences.<!--  
-	%% removed from Docu (still available in TOPP) because of lack of usage/support
-  - @subpage UTILS_HistView - A viewer for histograms.
 -->
 	- @subpage UTILS_MSSimulator - A highly configurable simulator for mass spectrometry experiments.
 	- @subpage UTILS_SvmTheoreticalSpectrumGeneratorTrainer - A trainer for svm models as input for SvmTheoreticalSpectrumGenerator.
