@@ -98,7 +98,6 @@ END_SECTION
 START_SECTION((static String getCategory(const String &toolname)))
 {
   TEST_EQUAL(ToolHandler::getCategory("PepNovoAdapter"), "Identification")
-  TEST_EQUAL(ToolHandler::getCategory("HistView"), "")
   TEST_EQUAL(ToolHandler::getCategory("DOESNOTEXIST"), "")
 }
 END_SECTION
